--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
     <a class="navbar-brand" href="/">
         GuiaPress
     </a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="/admin/categories">Categories</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/articles">Articles</a>
         </li>
     </ul>
 </nav>
