Added edition form for articles

--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -23,6 +23,7 @@
                     <td><%=article.slug%></td>
                     <td><%=article.category.title%></td>
                     <td>
+                    <a href="/admin/articles/edit/<%=article.id%>" class="btn btn-success">Edit</a>
                     <form method="POST" action="/admin/articles/delete"  style="display: inline" onsubmit="confirmaDelecao()">
                         <input type="hidden" name="id" value="<%=article.id%>">
                         <button class="btn btn-danger">Delete</button>
