--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -22,7 +22,7 @@
                     <td><strong><%=category.slug%></strong></td>
 
                     <td>
-                        <a href="/admin/categories/edit/<%=category.id%>" class="btn btn-warning">Edit</a>
+                        <a href="/admin/categories/edit/<%=category.id%>" class="btn btn-success">Edit</a>
                         <form method="POST" action="/admin/categories/delete"  style="display: inline" onsubmit="confirmaDelecao()">
                             <input type="hidden" name="id" value="<%=category.id%>">
                             <button class="btn btn-danger">Delete</button>
