--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,10 +18,9 @@
         <% articles.forEach((article) => {%>
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title"><%=article.title%></h2>
+                    <a href="article/<%=article.slug%>" style="text-decoration: none; color: black"><h2 class="card-title"><%=article.title%></h2></a>
                 </div>
                 <div class="card-body">
-                    <h6><strong>Category:</strong> <%=article.category.title%></h6>
                     <a href="article/<%=article.slug%>" class="btn btn-success">Read More</a>
                 </div>
             <div>
