Added pagination and admin model

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,12 @@
                 </div>
             <div>
         <%})%>
-        
+        <div class="row">
+            <div class="col">
+                <a href="/articles/page/2" class="btn btn-success float-right">Next</a>
+            </div>
+            <hr>
+        </div>
     </div>
 </body>
 <%- include('partials/footer') -%>
