--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,4 +10,11 @@
             <a class="nav-link" href="/admin/articles">Articles</a>
         </li>
     </ul>
+    <% if(user) { %>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+        </li>
+    </ul>
+    <%}%>
 </nav>
